# EDL-HMI-System

./: README.md
Board files/Bill of materials/: BILL of materials.txt  Bill of materials.csv
Board files/PCB/: PCB.brd
Board files/Schematic/: Schematic.sch
CAD files/3d print/: Button_cap_X2.stl  Knob.stl  body3.stl  body6.stl
CAD files/lasercut/: body1.dxf  body2.dxf  body4.dxf  body5.dxf
HMI code/test/: CMakeLists.txt  hmi.c
HMI code/test/src/: brightness.c  brightness.h  distance.c  distance.h  fonts.h  ili9341.c  ili9341.h  interface.c  interface.h  main.c  main.h  menu.c  menu.h  simulation.c  simulation.h  temp.c  temp.h  ui.c  ui.h
HMI code/test/src/screens/: distance_screen.c  distance_screen.h  popup.c  popup.h  simulator_screen.c  simulator_screen.h
